[package]
name = "rustsbi-qemu"
description = "RustSBI support package for QEMU"
version = "0.2.0-alpha.3"
authors = [
    "Luo Jia <me@luojia.cc>",
    "YdrMaster <ydrmaster@hotmail.com>",
    "Campbell He <hkp18@mails.tsinghua.edu.cn>",
    "Yifan Wu <shinbokuow@163.com>",
]
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["riscv", "sbi", "rustsbi"]
categories = ["os", "embedded", "hardware-support", "no-std"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { version = "0.4.0", features = ["machine"] }
sbi-spec = { version = "0.0.8", features = ["legacy"] }
riscv = "0.15.0"
spin = "0.10.0"
rcore-console = "0.0.0"
aclint = { path = "../../aclint" }
sifive-test-device = "0.0.0"
dtb-walker = "=0.2.0-alpha.3"
uart16550 = "0.0.1"

hsm-cell = { path = "../hsm-cell" }
# fast-trap = { version = "=0.1.0", features = ["riscv-m"] }
fast-trap = { path = "../../fast-trap/fast-trap", features = ["riscv-m"] }
