[package]
name = "test-kernel"
version = "0.2.0"
authors = ["Luo Jia <me@luojia.cc>", "YdrMaster <ydrml@hotmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 移除了sbi-testing依赖，使用内置的简化接口
log = { version = "0.4", optional = true }
riscv = "0.15.0"
spin = "0.10.0"
uart16550 = "0.0.1"
rcore-console = "0.0.0"
dtb-walker = "=0.2.0-alpha.3"
